--- a/application/modules/default/views/scripts/home/partials/plingprojects.phtml
+++ b/application/modules/default/views/scripts/home/partials/plingprojects.phtml
@@ -36,7 +36,7 @@
                                                                   
                     </a>
                      <span class="small created_at" ><img src="/images/system/pling-btn-active.png" style="width: 15px; height: 15px">
-                        <?= $this->printDate($p['created_at'])?>
+                        <?= /*$this->printDate($p['created_at'])*/ $p['sum_plings']; ?>
                      </span>
                 </div>
             </div>
