--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -143,7 +143,7 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             <?php                                 
                                         echo $this->partial('/home/partials/plingprojects.phtml', array(
-                                                "title"  => "Plinged Products",
+                                                "title"  => "Recently plinged Products",
                                                 "projects" => $this->plingproducts
                                             )
                                         );                   
