--- a/application/modules/default/views/scripts/misuse/list.phtml
+++ b/application/modules/default/views/scripts/misuse/list.phtml
@@ -136,7 +136,7 @@
                                         <?php if(isset($this->product['report_member_id'])) { ?>
                                         <a href="<?php echo $helpMemberUrl->buildMemberUrl($this->product['report_member_id']) ?>"><?php echo $this->product['report_username'] ?></a> 
                                         <?php } else { ?>
-                                        unkonwn
+                                        unknown
                                         <?php } ?>
                                             
                                         <?php echo $reportTime ?></b>
