--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -299,7 +299,7 @@ $this->inlineScript()->appendScript('
                                                             <!--<th><?= $this->translate('License') ?></th>-->
                                                             <!--<th><?= $this->translate('Filetype') ?></th>-->
                                                             <th><?= $this->translate('Packagetype') ?></th>
-                                                            <!--<th><?= $this->translate('Architecture') ?></th>-->
+                                                            <th><?= $this->translate('Architecture') ?></th>
                                                             <th><?= $this->translate('Date added') ?></th>
 
                                                             <th style="text-align: right"><?= $this->translate('Filesize') ?></th>
@@ -846,7 +846,7 @@ $this->inlineScript()->appendScript('
                                     + '<option value=\"4\">Windows executable</option>'
                                     + '</select>'
                                     + '</td>'
-                                    <?php /*
+                                    
                                     + '<td>'
                                     + '<select class="form-control input-sm" id="data-select-architecture' + this.id + '" data-architecture-id="" name="architecture">'
                                     + '    <option value=""></option>'
@@ -862,7 +862,7 @@ $this->inlineScript()->appendScript('
                                         ?>
                                     + '</select>'
                                     + '</td>'
-                                    */?>
+                                    
                                     + '<td>' + this.created_timestamp + '</td>'
                                     + '<td style="text-align: right">' + humanFileSize(this.size) + '</td>'
                                     + '<td>' + deletePploadFileBtnPerFile + '</td>'
@@ -872,7 +872,7 @@ $this->inlineScript()->appendScript('
                                 //$("#data-select-license" + this.id + " option[value='"+licenseId+"']").attr('selected', 'selected');
                                 $("#data-select-packagetype" + this.id + " option[value='"+packagetypeId+"']").attr('selected', 'selected');
                                 
-                                //$("#data-select-architecture" + this.id + " option[value='"+architectureId+"']").attr('selected', 'selected');
+                                $("#data-select-architecture" + this.id + " option[value='"+architectureId+"']").attr('selected', 'selected');
                                 
                                 /*
                                 $licenseSelect = $modalPpload.find('#data-select-license' + this.id);
@@ -885,12 +885,12 @@ $this->inlineScript()->appendScript('
                                 if(this.active == '0') {
                                     $packagetypeSelect.prop('disabled', 'disabled');
                                 }
-                                /*
+                                
                                 $architectureSelect = $modalPpload.find('#data-select-architecture' + this.id);
                                 if(this.active == '0') {
                                     $architectureSelect.prop('disabled', 'disabled');
                                 }
-                                */
+                                
 
                                 if ((typeof link != 'undefined') && (link != "")) {
                                     //$("#data-link" + this.id).attr('href', decodeURIComponent(link));
@@ -1069,7 +1069,7 @@ $this->inlineScript()->appendScript('
                                 + '<option value=\"4\">Windows executable</option>'
                                 + '</select>'
                                 + '</td>'
-                                <?php /*
+                                
                                 + '<td>'
                                 + '<select class="form-control input-sm" id="data-select-architecture' + data.file.id + '" data-architecture-id="" name="architecture">'
                                 + '    <option value=""></option>'
@@ -1085,7 +1085,6 @@ $this->inlineScript()->appendScript('
                                     ?>
                                 + '</select>'
                                 + '</td>'
-                                */ ?>
                         
                                 + '<td>' + data.file.created_timestamp + '</td>'
                                 + '<td style="text-align: right">' + humanFileSize(data.file.size) + '</td>'
