--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -913,6 +913,7 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
             PartialCommentReviewForm.setup();
             PartialsButtonHeartDetail.setup();    
             PartialsButtonPlingProject.setup();       
-            TooltipUser.setup("tooltipuserleft","left");              
+            TooltipUser.setup("tooltipuserleft","left");           
+            AppimagequestionOnClick.setup();   
         });
     ');
