--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -438,7 +438,7 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                             $("#data-select-packagetype" + this.id).hide();
                                             $("#file-tag-packagetype" + this.id).text($packagetypeIdText);
                                             if(packagetypeId==1){
-                                                $("#file-tag-packagetype" + this.id).append(' <i class="fa fa-question-circle appimagequestion"></i>');
+                                                $("#file-tag-packagetype" + this.id).append(' <i class="fa fa-question-circle appimagequestion" style="cursor: pointer;"></i>');
                                             }
 
                                         } else {
@@ -681,7 +681,7 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                              $("#data-select-packagetype" + this.id).hide();
                                              $("#file-tag-packagetype" + this.id).text($packagetypeIdText);
                                              if(packagetypeId==1){
-                                             $("#file-tag-packagetype" + this.id).append(' <i class="fa fa-question-circle appimagequestion"></i>');
+                                             $("#file-tag-packagetype" + this.id).append(' <i class="fa fa-question-circle appimagequestion" style="cursor: pointer;"></i>');
                                              }
 
                                          } else {
