--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -72,7 +72,7 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                  <th><?= $this->translate('Description'); ?></th>
                             
                                  <th><?= $this->translate('Packagetype'); ?></th>
-                                 <!--<th><?= $this->translate('Architecture'); ?></th>-->
+                                 <th><?= $this->translate('Architecture'); ?></th>
                              
                                  <th style="text-align: right"><?= $this->translate('Downloads'); ?></th>
                                  <th><?= $this->translate('Date'); ?></th>
@@ -354,7 +354,6 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                             + '<option value=\"4\">Windows executable</option>'
                                             + '</select><span id="file-tag-packagetype'+this.id+'">'
                                             + '</td>'
-                                            <?php /*
                                             + '<td>'
                                             + '<select class="form-control input-sm" id="data-select-architecture' + this.id + '" data-architecture-id="" name="architecture">'
                                             + '    <option value=""></option>'
@@ -370,7 +369,6 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                                 ?>
                                             + '</select><span id="file-tag-architecture'+this.id+'">'
                                             + '</td>'
-                                            */?>
                                             + '<td style="text-align: right"><span id="download_counter_' + this.id + '">' + count_downloads + '</td>'
                                             + '<td>' +mnt.format('YYYY-MM-DD') + '</td>'
                                             + '<td style="text-align: right">' + humanFileSize(this.size,false) + '</td>'
@@ -439,13 +437,16 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                             $packagetypeIdText = $("#data-select-packagetype" + this.id + " option[value='" + packagetypeId + "']").text();
                                             $("#data-select-packagetype" + this.id).hide();
                                             $("#file-tag-packagetype" + this.id).text($packagetypeIdText);
+                                            if(packagetypeId==1){
+                                                $("#file-tag-packagetype" + this.id).append(' <i class="fa fa-question-circle appimagequestion" style="cursor: pointer;"></i>');
+                                            }
+
                                         } else {
                                          $("#data-select-packagetype" + this.id).hide();
                                         }
 
                                         $("#data-select-packagetype" + this.id).hide();
                                         
-                                        /**
                                         if ((typeof architectureId != 'undefined') && (architectureId != "")) {
                                             $("#data-select-architecture" + this.id + " option[value='" + architectureId + "']").attr('selected', 'selected');
                                             $architectureIdText = $("#data-select-architecture" + this.id + " option[value='" + architectureId + "']").text();
@@ -456,7 +457,7 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                         }
 
                                         $("#data-select-architecture" + this.id).hide();
-                                        */
+                                        
                                         if ((typeof this.ocs_compatible != 'undefined') && (this.ocs_compatible != "") && this.ocs_compatible == 1) {
                                             $("#data-checkbox-compatible-" + this.id).attr('checked', 'checked');
                                         }
@@ -679,6 +680,10 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                              $packagetypeIdText = $("#data-select-packagetype" + this.id + " option[value='" + packagetypeId + "']").text();
                                              $("#data-select-packagetype" + this.id).hide();
                                              $("#file-tag-packagetype" + this.id).text($packagetypeIdText);
+                                             if(packagetypeId==1){
+                                             $("#file-tag-packagetype" + this.id).append(' <i class="fa fa-question-circle appimagequestion" style="cursor: pointer;"></i>');
+                                             }
+
                                          } else {
                                           $("#data-select-packagetype" + this.id).hide();
                                          }
@@ -739,7 +744,7 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
 
                                  $pploadCollection.find('table[data-ppload-files] tfoot').append(
                                      '<tr>'
-                                     + '<th colspan="4">' + myArrayActive.length + ' <?= $this->translate("files")?> (<span style="color: #ccc;" ><a style="cursor:pointer" onclick="fnToggleInactiveFiles();return false;">'+myArrayInactive.length+' archived</a></span>)</th>'
+                                     + '<th colspan="5">' + myArrayActive.length + ' <?= $this->translate("files")?> (<span style="color: #ccc;" ><a style="cursor:pointer" onclick="fnToggleInactiveFiles();return false;">'+myArrayInactive.length+' archived</a></span>)</th>'
                                      + '<th style="text-align: right">' + downloaded_count_total + '</th>'
                                      + '<th></th>'
                                     + '<th style="text-align: right">' + fileSizeSum.toFixed(2) + ' MB</th>'
