--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -644,6 +644,23 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                             + '</select><span id="file-tag-architecture'+this.id+'">'
                                             + '</td>'
                                             */?>
+
+                                            + '<td>'
+                                            + '<select class="form-control input-sm" id="data-select-architecture' + this.id + '" data-architecture-id="" name="architecture">'
+                                            + '    <option value=""></option>'
+                                                <?php
+                                                // force $value to array so we can compare multiple values to multiple
+                                                // options; also ensure it's a string for comparison purposes.
+                                                $tagList = $architectureListHelper->fetchList();
+                                                foreach ($tagList as $opt_value => $opt_label) {
+                                                ?>
+                                                  + '<option value="<?= $opt_value ?>"><?= $opt_label ?></option>'
+                                                <?php
+                                                }
+                                                ?>
+                                            + '</select><span id="file-tag-architecture'+this.id+'">'
+                                            + '</td>'
+
                                             + '<td style="text-align: right"><span id="download_counter_' + this.id + '">' + cout_downloads + '</td>'
                                             + '<td>' +mnt.format('YYYY-MM-DD')  + '</td>'
                                             + '<td style="text-align: right">' + humanFileSize(this.size,false) + '</td>'
@@ -689,6 +706,17 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                          }
 
                                          $("#data-select-packagetype" + this.id).hide();
+
+                                          if ((typeof architectureId != 'undefined') && (architectureId != "")) {
+                                              $("#data-select-architecture" + this.id + " option[value='" + architectureId + "']").attr('selected', 'selected');
+                                              $architectureIdText = $("#data-select-architecture" + this.id + " option[value='" + architectureId + "']").text();
+                                              $("#data-select-architecture" + this.id).hide();
+                                              $("#file-tag-architecture" + this.id).text($architectureIdText);
+                                          } else {
+                                           $("#data-select-architecture" + this.id).hide();
+                                          }
+
+                                          $("#data-select-architecture" + this.id).hide();
 
                                          /**
                                          if ((typeof architectureId != 'undefined') && (architectureId != "")) {
